# artifact_remover_vst3

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  cleaned_signal.txt  generate_test_signal.py  test_48khz_processed.txt  verify_test.py
.claude/: settings.json
demo/: DecompositionExample.cpp  JuceAudioProcessingTest.cpp  RemoverExample.cpp  RingBufferExample.cpp  signal.txt
include/artifact_remover/: FFT.h  RingBuffer.h  SignalDecomposition.h  Types.h  remover.h
juce_plugin/: CMakeLists.txt  DebugLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
src/: FFT.cpp  RingBuffer.cpp  SignalDecomposition.cpp  remover.cpp
